--- a/configuration/emails/award-claim-complete-body.mjml
+++ b/configuration/emails/award-claim-complete-body.mjml
@@ -25,7 +25,7 @@
 
             {{#if @root.data.ysCode}}
 
-            <p>To recognise all your hard work you have earned {{@root.context.metaData.youngScotSettings.points-per-certificate}} Young Scot Rewards points. You can use your points to access some amazing opportunities through
+            <p>To recognise all your hard work you have earned {{getProperty @root.context.metaData.youngScotSettings.points-per-certificate @root.request.params.query.award}} Young Scot Rewards points. You can use your points to access some amazing opportunities through
               Rewards ranging from behind the scenes experiences, work shadowing opportunities, tickets for events and so much more!</p>
 
             <p>To redeem your points and access Rewards become a Young Scot Member.</p>
