reformat home page

--- a/src/main.scss
+++ b/src/main.scss
@@ -164,8 +164,8 @@ a.btn:hover,
 .btn:active,
 .btn:focus,
 .btn:hover {
-  background-color: $light-color;
-  color: $primary-color-dark;
+  background-color: $primary-color-dark;
+  color: white;
   border-color: $primary-color-dark;
 }
 a.btn-primary:link,
