--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -6,21 +6,13 @@
   </div>
 </div>
 <div class="container">
-  <h2 class="text-centre">
-    Aged 12-25 and volunteer?
-  </h2>
-  <p class="text-centre b-margin-full">
-    <strong>{{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating,<br />
-    recognising and rewarding the commitment, contribution and <br />
-    achievements of young volunteers in Scotland.</strong>
-  </p>
-  <h3 class="text-centre no-margin">
+  <h3 class="no-margin text-centre">
     Get certificates
   </h3>
-  <p class="text-centre b-margin-full b-padding">
+  <p class="b-margin-full b-padding text-centre">
     <strong>Signed by Scottish Government Ministers</strong>
   </p>
-  <div class="columns certificates">
+  <div class="columns certificates b-margin-full">
     <div class="column col-sm-6 col-3 certificate text-centre">
       {{> badge api_name="Challenge"}}
       <h4 class="t-margin-full">
@@ -58,34 +50,45 @@
       </p>
     </div>
   </div>
-  <h3 class="text-centre t-margin">
-    Volunteer?
-  </h3>
-  <div class="my-saltire columns b-margin-full">
-    <div class="column col-sm-12 col-6 col-mx-auto">
-      <div class="columns">
-        <div class="column col-6 my-saltire-item align-centre">
-          <a href="/sign-up" class="btn btn-block btn-primary text-centre">Sign up now</a>
-        </div>
-        <div class="column col-6 my-saltire-item align-centre">
-          <a href="/sign-in" class="btn btn-block text-centre">Sign in</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <h3 class="text-centre t-margin">
-    Group administrator?
-  </h3>
-  <div class="my-saltire columns b-margin-full">
-    <div class="column col-sm-12 col-6 col-mx-auto">
-      <div class="columns">
-        <div class="column col-6 my-saltire-item align-centre">
-          <a href="/sign-up-admin" class="btn btn-block text-centre">Request approval</a>
-        </div>
-        <div class="column col-6 my-saltire-item align-centre">
-          <a href="/sign-in-admin" class="btn btn-block text-centre">Group administrator sign in</a>
+  <div class="columns">
+    <div class="column col-6 col-lg-12">
+      <h2>
+        Aged 12-25 and volunteer?
+      </h2>
+      <p class="b-margin-full">
+        {{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.
+      </p>
+      {{!-- <h3 class="t-margin">
+        Volunteer?
+      </h3> --}}
+      <div class="my-saltire columns b-margin-full">
+        <div class="column col-12 col-mx-auto">
+          <div class="columns">
+            <div class="column col-6 my-saltire-item align-centre">
+              <a href="/sign-up" class="btn btn-block btn-primary text-centre">Sign up now</a>
+            </div>
+            <div class="column col-6 my-saltire-item align-centre">
+              <a href="/sign-in" class="btn btn-block text-centre">Sign in</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+    <div class="column col-6 col-lg-12">
+      <h3 class="t-margin">
+        Group administrator?
+      </h3>
+      <div class="my-saltire columns b-margin-full">
+        <div class="column col-12 col-mx-auto">
+          <div class="columns">
+            <div class="column col-6 my-saltire-item align-centre">
+              <a href="/sign-up-admin" class="btn btn-block text-centre">Request approval</a>
+            </div>
+            <div class="column col-6 my-saltire-item align-centre">
+              <a href="/sign-in-admin" class="btn btn-block text-centre">Group administrator sign in</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
