--- a/configuration/templates/volunteering/email/verify-hours-reminder.hbs
+++ b/configuration/templates/volunteering/email/verify-hours-reminder.hbs
@@ -29,8 +29,7 @@
   "from": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
   "h:sender": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
   "h:Reply-To": "{{>support_name}} <{{>support_email_address}}>",
-  {{!-- "to": "{{>support_name}} <{{>support_email_address}}>", --}}
-  "to": "anuttgens@gmail.com",
+  "to": "{{>support_name}} <{{>support_email_address}}>",
   "o:tag": "{{{@root.route.metaData.TSIEmailType}}}",
   "o:tracking": true,
   "v:tasks": "{{>account_list_tasks email=this}}",
