--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -26,11 +26,11 @@
           <span class="text-grey">Your organisation can keep its own accurate records of young people's volunteering hours</span>
         </li>
         <li>
-          <span class="fa-li"><span class="far fa-times-circle text-success"></span></span>
+          <span class="fa-li"><span class="far fa-check-circle text-success"></span></span>
           <span class="text-grey">Your organisation can follow the print standard guidelines to produce Saltire Awards certificates</span>
         </li>
         <li>
-          <span class="fa-li"><span class="far fa-times-circle text-success"></span></span>
+          <span class="fa-li"><span class="far fa-check-circle text-success"></span></span>
           <span class="text-grey">Your organisation is committed to encouraging and supporting young people to create their own My Saltire account (where possible)</span>
         </li>
       </ul>
