--- a/configuration/templates/volunteering/awards.hbs
+++ b/configuration/templates/volunteering/awards.hbs
@@ -50,12 +50,12 @@
       <a href="/certificate/{{award_id}}/saltire-{{lowercase award_level}}-award.pdf" data-component="TasksTrigger" data-TasksTrigger="no-multi-click" class="btn btn-primary">Download</a>
       {{/compare ~}}
       {{#unless printed_certificate_requested ~}}
-      <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" class="btn">Print request</a>
+      <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" class="btn">Request print copy</a>
       {{else}}
       {{#unless printed_certificate_issued ~}}
-      <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" disabled class="btn">Print requested</a>
+      <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" disabled class="btn btn-link">Print copy requested</a>
       {{else}}
-      <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" disabled class="btn">Printed certificate sent</a>
+      <a href="#" data-component="TasksTrigger" data-TasksTrigger="show-certificate-request" disabled class="btn btn-link">Printed certificate sent</a>
       {{/unless ~}}
       {{/unless ~}}
       {{#compare (length @root.data.accountInfo.awards_list) ">" 1 ~}}
