--- a/configuration/emails/hours-verify-body.mjml
+++ b/configuration/emails/hours-verify-body.mjml
@@ -16,9 +16,12 @@
             </p>
 
             <p>
-              {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}
-              {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}}
-              is applying for a {{@root.context.metaData.certificateName}} for volunteering with you. Please confirm the following volunteering hours are accurate below.
+              You are receiving this email because {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}
+              {{#if @root.data.accountInfo.school_college_name}}from {{@root.data.accountInfo.school_college_name}}{{/if}} is applying for a {{@root.context.metaData.title}} {{@root.context.metaData.certificateName}} for volunteering with your organisation and has named you as their volunteer manager.
+            </p>
+
+            <p>
+              Please confirm the following volunteering hours are accurate and were completed with your organisation and within the last two years by clicking on the appropriate link below.
             </p>
 
             <ul>
@@ -40,7 +43,7 @@
             </ul>
 
             <p>
-              Please <a href="{{@root.context.metaData.url}}/verify-hours/?t={{>account_list_tasks email=this}}&c={{@root.data.verifyInfoBody.hours_verify_code}}&user_id={{@root.data.auth.uid}}">confirm these hours are correct</a> or <a href="{{@root.context.metaData.url}}/query-hours/?t={{>account_list_tasks email=this}}&c={{@root.data.verifyInfoBody.hours_verify_code}}&user_id={{@root.data.auth.uid}}">make any corrections</a>.
+              Please <a href="{{@root.context.metaData.url}}/verify-hours/?t={{>account_list_tasks email=this}}&c={{@root.data.verifyInfoBody.hours_verify_code}}&user_id={{@root.data.auth.uid}}">confirm these hours are correct</a> or <a href="{{@root.context.metaData.url}}/query-hours/?t={{>account_list_tasks email=this}}&c={{@root.data.verifyInfoBody.hours_verify_code}}&user_id={{@root.data.auth.uid}}">make any amendments</a>.
             </p>
           </mj-text>
         </mj-column>
