--- a/configuration/partials/emails/admin-await-approval-body.html
+++ b/configuration/partials/emails/admin-await-approval-body.html
@@ -197,9 +197,10 @@
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#16204e;">
-                                          <p>Hello {{@root.data.accountInfo.first_name}},</p>
-                                          <p> Thank you for signing up as a Group Adminstrator for the Saltire Awards. Your request for approval as a Group Adminstrator of Saltire Awards has been sent to {{@root.data.accountInfo.tsi_contact_email}}. </p>
-                                          <p> We will be in touch with you when the Third Sector Interface managing this are have approved your account. They may be in contact with you directly if they have any queries. </p>
+                                          <p> Hello {{@root.data.accountInfo.first_name}}, </p>
+                                          <p> Thank you for signing up as a Group Administrator for the {{@root.context.metaData.title}}, your local Third Sector Interface (TSI) is now dealing with your request. </p>
+                                          <p> You will receive an email notification when your request has been approved. In the unlikely event that there is a problem with your application your local TSI will contact you directly to discuss. </p>
+                                          <p> In the meantime, please <a href="mailto:{{@root.data.accountInfo.tsi_contact_email}}">contact your local TSI</a> if you need any further help or support. </p>
                                         </div>
                                       </td>
                                     </tr>
