--- a/configuration/emails/hours-verify-tsi-email-body.mjml
+++ b/configuration/emails/hours-verify-tsi-email-body.mjml
@@ -25,7 +25,7 @@
               applied for a {{@root.context.metaData.certificateName}} for the volunteering tasks listed below. Unfortunately the maximum time has elapsed
               without {{@root.data.accountInfo.first_name}}'s hours being verified. Please could you check the hours below and confirm or edit them
               using the links below, or alternatively update the details on Milo. {{#if @root.data.accountInfo.tsi_award_authorization_required}}
-              Please note that you also need to <strong>set the TSI authorization level to {{@root.context.metaData.certificateName}}</strong> for the award to be granted{{/if}}
+              Please note that you also need to <strong>set the TSI authorisation level to {{@root.context.metaData.certificateName}}</strong> for the award to be granted{{/if}}
             </p>
 
             {{#each @root.data.tasksInfoUnverified ~}}
