--- a/configuration/templates/volunteering/email/verify-hours-reminder.hbs
+++ b/configuration/templates/volunteering/email/verify-hours-reminder.hbs
@@ -36,7 +36,7 @@
   "tag":  "{{{@root.route.metaData.TSIEmailType}}}",
   "id":  "{{{@root.route.metaData.TSIEmailType}}}",
   "connectionName": {{{stringify (getProperty @root.context.metaData.emailSendSettings (concat @root.route.metaData.TSIEmailType '.mailgunConnection'))}}},
-  "subject": "TSI Authorization needed {{#compare @root.route.metaData.emailType '===' 'hours-verify-reminder'}}reminder{{/compare}}",
+  "subject": "TSI authorisation needed {{#compare @root.route.metaData.emailType '===' 'hours-verify-reminder'}}reminder{{/compare}}",
   "html":
   {{~#blockStringify this ~}}
     {{~>
