--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -87,11 +87,11 @@
                   <div class="popover-container">
                     <div class="card">
                       <div class="card-body caption">
-                        Required.
+                        Required -
                         {{#if @root.data.isAdmin ~}}
-                        This information will appear on each young person's certificate so please make sure it is accurate.
+                        this information will appear on each young person's certificate so please make sure it is accurate
                         {{else}}
-                        This information will appear on your certificate so please make sure it is accurate.
+                        this information will appear on your certificate so please make sure it is accurate
                         {{/if ~}}
                       </div>
                     </div>
@@ -114,9 +114,9 @@
                     <div class="card">
                       <div class="card-body caption">
                         {{#if @root.data.isAdmin ~}}
-                        Optional. This is for your own reference and not shown on certificates.
+                        Optional - this is for your own reference and not shown on certificates
                         {{else}}
-                        Optional. This is not shown on certificates but is shown on your profile.
+                        Optional - this is not shown on certificates but is shown on your profile
                         {{/if ~}}
                       </div>
                     </div>
@@ -154,11 +154,11 @@
                   <div class="popover-container">
                     <div class="card">
                       <div class="card-body caption">
-                        Required.
+                        Required -
                         {{#if @root.data.isAdmin ~}}
-                        This can be altered on each individual certificate.
+                        this can be altered for each individual
                         {{else}}
-                        This information may appear on your certificate so please make sure it is accurate.
+                        this information may appear on your certificate so please make sure it is accurate
                         {{/if ~}}
                       </div>
                     </div>
@@ -180,7 +180,7 @@
                   <div class="popover-container">
                     <div class="card">
                       <div class="card-body caption">
-                        You could make a note of all the activities you have been doing, the skills and experience you have gained as well as any challenges you have faced.  You will be able to look back at this for reference and use it to as part of a CV or job application.
+                        You could make a note of all the activities you have been doing, the skills and experience you have gained as well as any challenges you have faced - you will be able to look back at this for reference and use it to as part of a CV or job application
                       </div>
                     </div>
                   </div>
@@ -214,7 +214,7 @@
                     <div class="popover-container">
                       <div class="card">
                         <div class="card-body caption">
-                          Optional. This is for your own reference and not shown on certificates.
+                          Optional - this is for your own reference and not shown on certificates
                         </div>
                       </div>
                     </div>
@@ -234,9 +234,7 @@
                   <div class="popover-container">
                     <div class="card">
                       <div class="card-body caption">
-                        Optional. If you choose any, the SDG logo will appear on your certificates and the SDGs you contribute towards will appear on your profile.<br />
-                        The United Nations <a href="https://globalgoals.org" target="_blank">Sustainable Development Goals</a> (SDGs) are key to ensuring that everyone, regardless of who you are, has access to the best possible livelihood and future. The SDGs, are a set of seventeen goals that tackle a range of issues: from improving health, ending hunger, poverty, and inequality to acting on the climate emergency that requires rapid change. The 2030 Agenda for Sustainable Development recognises volunteer groups as key stakeholders to achieve the 17 SDGs. We must all do our bit if we are to realise the ambition of the SDGs by 2030.<br />
-                        <a href="/sustainable-development-goals" target="_blank">Read more</a>
+                        Optional - if you choose any, the SDG logo will appear on your certificates and the SDGs you contribute towards will appear on your profile <a href="/sustainable-development-goals" target="_blank">Read more</a>
                       </div>
                     </div>
                   </div>
