Changed input type for testimonial

--- a/configuration/partials/verify-pass.hbs
+++ b/configuration/partials/verify-pass.hbs
@@ -1,5 +1,7 @@
 <p class="empty-title h4">Volunteering verification</p>
 <p class="empty-subtitle">
-  Verification of hours volunteered by {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}} has been recorded.<br />
-  You may now close this page
+  Verification of hours volunteered by {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}} has been recorded
+</p>
+<p class="empty-subtitle">
+  You can now close this page
 </p>
