--- a/configuration/templates/volunteering/admin-group.hbs
+++ b/configuration/templates/volunteering/admin-group.hbs
@@ -8,18 +8,6 @@
     <span id="form-message"></span>
   </div>
 
-  <!--<div class="modal" id="confirm-modal">-->
-  <!--<a href="#" class="modal-overlay" aria-label="Close"></a>-->
-  <!--<div class="modal-container">-->
-  <!--<div class="modal-body">-->
-  <!--<div class="content">-->
-  <!---->
-  <!--</div>-->
-  <!--</div>-->
-  <!--</div>-->
-  <!--</div>-->
-
-
   {{#if @root.request.params.task_id ~}}
     {{#with @root.data.taskInfo ~}}
       {{#compare task_id @root.request.params.task_id ~}}
@@ -167,12 +155,12 @@
                                   <div class="form-group b-margin">
                                     <input id="{{award_id}}-modal-group_award_last_name"  {{#unless claim_code ~}}disabled{{/unless}} class="form-input inline-edit" name="group_award_last_name" value="{{group_award_last_name}}">
                                   </div>
-                                  <div class="form-group b-margin">
 
+                                  <div class="form-group b-margin">
                                     <select id="{{award_id}}-modal-award_level"  class="form-select hours" {{#unless claim_code~}}disabled{{/unless}} required name="award" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.award}}>
                                       {{#each @root.context.metaData.certificates ~}}
                                         {{#unless tsi_only ~}}
-                                          <option value="{{api_name}}"{{#compare api_name ../award_level}} selected{{/compare}}>
+                                          <option value="{{api_name}}"{{#compare api_name ../award_level}} selected{{/compare}}{{#compare hours "<" ../award_level_numerical_value}} disabled{{/compare}}>
                                             {{#ifAny (compare type "approach") (compare type "ascent") ~}}
                                               {{hours}} hours
                                             {{else}}
@@ -181,7 +169,7 @@
                                           </option>
                                         {{else}}
                                           {{#if @root.data.accountInfo.summit_certificate_permission ~}}
-                                            <option value="{{api_name}}">
+                                            <option value="{{api_name}}"{{#compare api_name ../award_level}} selected{{/compare}}>
                                               {{type_name}}
                                             </option>
                                           {{/if ~}}
