--- a/configuration/emails/hours-verify-body.mjml
+++ b/configuration/emails/hours-verify-body.mjml
@@ -29,14 +29,14 @@
               {{#compare unverified_hours_list.length ">=" 1}}
               {{#compare this.volunteer_manager_email "===" ../this}}
               <li>
-                <strong>Volunteering</strong> for <strong>{{organisation_name}}</strong>, Manager: {{volunteer_manager_first_name}} {{volunteer_manager_last_name}} - {{volunteer_manager_title}}
+                Volunteering for <strong>{{organisation_name}}</strong>, Manager: {{volunteer_manager_first_name}} {{volunteer_manager_last_name}} - {{volunteer_manager_title}}
                 <ul>
                   <li>Role: {{truncate task_role 140}}</li>
                   {{#each this.unverified_hours_list}}
                   <li>Hours: {{hours}} - logged on: {{momentFormat (moment createdDate "YYYY-MM-DD") "MMMM Do YYYY"}}</li>
                   {{/each}}
-                  {{#ifAll (compare hours_verified ">" 0) (compare hours_verified "!==" hours) ~}}
-                  <li>Already verified: {{hours_verified}} of {{hours}} hours</li>
+                  {{#ifAll (compare this.hours_verified ">" 0) (compare this.hours_verified "!==" hours) ~}}
+                  <li>Already verified: {{this.hours_verified}} of {{this.hours}} hours</li>
                   {{/ifAll ~}}
                 </ul>
               </li>
