--- a/configuration/partials/emails/hours-verify-tsi-email-body.html
+++ b/configuration/partials/emails/hours-verify-tsi-email-body.html
@@ -206,13 +206,14 @@
                                           </p>
                                           {{#each @root.data.tasksInfoUnverified ~}}
                                             {{#compare unverified_hours_list.length ">=" 1 ~}}
-                                              <h4><strong>Volunteering</strong> for <strong>{{organisation_name}}</strong></h4>
+                                              <h4>Volunteering for <strong>{{organisation_name}}</strong></h4>
                                               <ul>
                                                 <li> Manager: <ul>
-                                                    <li>Name: {{volunteer_manager_first_name}} {{volunteer_manager_last_name}}
-                                                    <li>Role: {{volunteer_manager_title}}
-                                                      {{#if volunteer_manager_email}}
-                                                    <li>Email: {{volunteer_manager_email}}</li>{{/if}}
+                                                    <li>Name: {{volunteer_manager_first_name}} {{volunteer_manager_last_name}}</li>
+                                                    <li>Role: {{volunteer_manager_title}}</li>
+                                                    {{#if volunteer_manager_email}}
+                                                      <li>Email: {{volunteer_manager_email}}</li>
+                                                    {{/if}}
                                                     {{#if volunteer_manager_phone}}
                                                       <li>Phone: {{volunteer_manager_phone}}</li>
                                                     {{/if}}
@@ -222,12 +223,15 @@
                                                     {{#each this.unverified_hours_list}}
                                                       <li>{{hours}} - logged on: {{momentFormat (moment createdDate "YYYY-MM-DD") "MMMM Do YYYY"}}</li>
                                                     {{/each}}
+                                                    {{#ifAll (compare this.hours_verified ">" 0) (compare this.hours_verified "!==" hours) ~}}
+                                                      <li>Already verified: {{this.hours_verified}} of {{this.hours}} hours</li>
+                                                    {{/ifAll ~}}
                                                   </ul>
                                                 </li>
                                               </ul>
                                             {{/compare ~}}
                                           {{/each ~}}
-                                          <p> You can now <a href="{{@root.context.metaData.url}}/verify-hours/?t={{>account_list_tasks}}&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">confirm that these hours are correct</a> <a href="{{@root.context.metaData.url}}/query-hours/?t={{>account_list_tasks}}&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">make corrections</a>. </p>
+                                          <p> You can now <a href="{{@root.context.metaData.url}}/verify-hours/?t={{>account_list_tasks}}&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">confirm that these hours are correct</a> or <a href="{{@root.context.metaData.url}}/query-hours/?t={{>account_list_tasks}}&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">make corrections</a>. </p>
                                         </div>
                                       </td>
                                     </tr>
