--- a/configuration/partials/emails/request-printed-certificate-body.html
+++ b/configuration/partials/emails/request-printed-certificate-body.html
@@ -205,7 +205,7 @@
                                           <p> The certificate should be sent to: </p>
                                           <address>
                                             <strong>{{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}<br />
-                                              {{@root.request.body.address_value}}<br />
+                                              {{{stripTags @root.request.body.address_value}}}<br />
                                               {{@root.data.accountInfo.postcode}}</strong>
                                           </address>
                                         </div>
